--- a/voice/.env
+++ b/voice/.env
@@ -5,3 +5,4 @@ FIREBASE_PROJECT_ID=voice-e358a
 FIREBASE_STORAGE_BUCKET=voice-e358a.firebasestorage.app
 FIREBASE_MESSAGING_SENDER_ID=864601299966
 FIREBASE_APP_ID=1:864601299966:web:dfd8fcf737de75ad453eaf
+MONGO_URI=mongodb://localhost:27017/voicedata
